--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: ./flask-app
     container_name: flask-log-app
     volumes:
-      - ./logs:/app/logs
+      - logs-volume:/app/logs
     ports:
       - "5000:5000"
 
@@ -15,7 +15,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./logs:/app/logs
+      - logs-volume:/app/logs
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
@@ -46,6 +46,9 @@ services:
       - "5044:5044"
     volumes:
       - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
-      - ./logs:/app/logs
+      - logs-volume:/app/logs
     depends_on:
       - elasticsearch
+
+volumes:
+  logs-volume:
