--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,18 @@ services:
       - logs-volume:/app/logs
     ports:
       - "5000:5000"
+    depends_on:
+      - elasticsearch  # facultatif si tu écris dans ES directement
 
   ml-api:
     build: ./ml-api
     container_name: ml-api
-    ports:
-      - "8000:8000"
     volumes:
       - logs-volume:/app/logs
+    ports:
+      - "8000:8000"
+    depends_on:
+      - flask-app
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
@@ -34,20 +38,23 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.0
     container_name: kibana
-    ports:
-      - "5601:5601"
     environment:
       ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
 
   logstash:
     image: docker.elastic.co/logstash/logstash:7.17.0
     container_name: logstash
-    ports:
-      - "5044:5044"
     volumes:
       - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
       - logs-volume:/app/logs
+    ports:
+      - "5044:5044"
     depends_on:
+      - flask-app
       - elasticsearch
 
 volumes:
